type5 уже:: 1. чета есть +- 2. чета есть +- 3. чета есть +-
